--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,28 @@
 <h1>hello</h1>
+
+<!-- C&P FROM FIREBASE -->
+<body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBRhAlt1aJy_2BKQG-t4PbAZzp6zTYFHjg",
+    authDomain: "giphia-9e631.firebaseapp.com",
+    projectId: "giphia-9e631",
+    storageBucket: "giphia-9e631.appspot.com",
+    messagingSenderId: "910625041730",
+    appId: "1:910625041730:web:c8322c587ce123c7a5ecdb",
+    measurementId: "G-16HX29XC3N"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+</body>
