--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,5 @@
+<div class="container">
+    <router-outlet></router-outlet>
+  </div>
 
-<div>
-<form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-    <h2>Create Account - DRAFT</h2>
-    <label for="email">Email</label>
-    <input id="email" type="email" ngModel name="email" #emailSignup required email>
-    <label for="password">Password</label>
-    <input id="password" type="password" ngModel name="password" #passwordSignup required minlength="6">
-    <button type="submit">Sign Up</button>
-    <!-- <button (click)="createAccount(emailCreateAccount.value,passwordCreateAccount.value)" [disabled]="authForm.invalid">Create freaking account</button> -->
-</form>
-
-
-
-</div>
+<app-endless-trivia></app-endless-trivia>
