--- a/src/app/game-modes/time-challenge/time-challenge.component.html
+++ b/src/app/game-modes/time-challenge/time-challenge.component.html
@@ -1,5 +1,7 @@
 <!--Christa - need to update this based on Auth-->
 
+
+
 <h2>Login</h2>
 
 <div class="container">
@@ -12,7 +14,14 @@
         <input type="text" placeholder="Enter Password" id="password" required  /> <!-- [(ngModel)]="" not sure what this ngModel will be -->
 
         <button>Submit</button> <!-- (click)="" not sure what this click method will be -->
-        
     </form>
+</div>  
 
-</div>
+<h1>Time Challenge</h1>
+<section class="blocks">
+<button id="startbutton">Start</button>
+<button id="resetbutton">Reset</button>
+<div id="timerbutton"></div>
+</section>
+<section class="time-count"></section>
+
