--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,10 @@
-
+<div>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+        <h2>Create Account - DRAFT</h2>
+        <label for="email">Email</label>
+        <input id="email" type="email" ngModel name="email" #emailSignup required email>
+        <label for="password">Password</label>
+        <input id="password" type="password" ngModel name="password" #passwordSignup required minlength="6">
+        <button type="submit">Sign Up</button>
+    </form>
+</div>
