--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,10 +1,14 @@
 <div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-        <h2>Create Account - DRAFT</h2>
-        <label for="email">Email</label>
-        <input id="email" type="email" ngModel name="email" #emailSignup required email>
-        <label for="password">Password</label>
-        <input id="password" type="password" ngModel name="password" #passwordSignup required minlength="6">
-        <button type="submit">Sign Up</button>
+        <h2>Sign In</h2>
+        <mat-form-field>
+          <input matInput id="email" type="email" ngModel name="email" placeholder="Email" #email="ngModel" required email>
+          <mat-error *ngIf="email.invalid">Please enter a valid Email</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput id="password" type="password" ngModel name="password" placeholder="Password (min=6 characters)" #password="ngModel" required minlength="6">
+          <mat-error *ngIf="password.invalid">Please enter a valid Password</mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="accent" type="submit">Sign Up</button>
     </form>
 </div>
