--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -1,9 +1,34 @@
 form {
   margin: 40% auto 50px;
-  padding: 30px;
+  padding: 3em;
   display: flex;
   flex-direction: column;
   width: 50%;
   border: 1px solid grey;
   border-radius: 5px;
+  box-shadow: 0px 0px 0px 8px #000000, 0px 0px 0px 16px #4B4C4B, 0px 0px 0px 24px #828482, 0px 0px 0px 31px #B2B5B2, 0px 0px 0px 39px #DADDDA, 5px 5px 15px 5px rgba(0,0,0,0);
+}
+
+h2 {
+  text-align: center;
+}
+
+input, button {
+  margin-top: 2em;
+}
+
+button {
+  text-align: center;
+}
+
+.switch-form {
+  text-align: center;
+  margin-top: 1em;
+}
+
+a {
+  margin-left: 5px;
+  font-size: 20px;
+  color: rgb(58, 141, 236);
+  cursor: pointer;
 }
