--- a/src/app/game-modes/time-challenge/time-challenge.component.css
+++ b/src/app/game-modes/time-challenge/time-challenge.component.css
@@ -2,9 +2,9 @@
   font-weight: 700;
   font-family: "Open Sans", sans-serif;
 }
-/* body {
-  background-image: url(Giphia.png);
-} */
+body {
+  background-image: url(/links/Giphia.png);
+}
 h1 {
   padding-top: 5%;
   padding-bottom: 3%;
@@ -30,7 +30,7 @@ h1 {
   border-radius: 5px;
   color: black;
   font-size: 18px;
-  box-shadow: 2px 2px 7px rgb(158, 53, 26);
+  box-shadow: 2px 2px 7px rgb(177, 47, 25);
 }
 #resetbutton {
   width: 110px;
@@ -41,7 +41,7 @@ h1 {
   border-radius: 5px;
   color: black;
   font-size: 18px;
-  box-shadow: 2px 2px 7px rgb(158, 53, 26);
+  box-shadow: 2px 2px 7px rgb(177, 47, 25);
 }
 #timerbutton {
   width: 150px;
@@ -49,7 +49,7 @@ h1 {
   margin: 5px;
   padding-top: 10px;
   background-color: white;
-  box-shadow: 2px 2px 7px rgb(158, 53, 26);
+  box-shadow: 2px 2px 7px rgb(177, 47, 25);
   border: none;
   border-radius: 5px;
   color: black;
@@ -88,4 +88,5 @@ h1 {
     height: 35px;
     margin: 5px;
     padding-top: 15px;
-  }}
+  }
+}
