first commit to new branch

--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -14,10 +14,10 @@
   </header>
   
   <body>
-      <button (click)="leaderboardRoute()"></button>
+      <button (click)="endlessTriviaGame()">Play Endless Trivia</button>
       <!-- <li><a routerLink="/leaderboard">Leaderboard</a></li> -->
   
-      <button (click)="playGameRoute()"></button>
+      <button (click)="timeChallengeGame()">Play Time Challenge</button>
       <!-- <li><a routerLink="/game-modes">Play</a></li> -->
   </body>
   
