--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
     <router-outlet></router-outlet>
   </div>
 
-<app-endless-trivia></app-endless-trivia>
+<!-- <app-endless-trivia></app-endless-trivia> -->
