--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -32,3 +32,8 @@ a {
   color: rgb(58, 141, 236);
   cursor: pointer;
 }
+
+.req-error {
+  background-color: rgb(218, 116, 133);
+  color: rgb(207, 55, 55);
+}
