--- a/src/app/game-modes/time-challenge/time-challenge.component.html
+++ b/src/app/game-modes/time-challenge/time-challenge.component.html
@@ -1,6 +1,7 @@
 <h1>Time Challenge</h1>
 <section class="blocks">
 <button id="startbutton" (click)='startTimer()'>Start</button>
+<button id="pausebutton" (click)='pauseButton()'>Pause</button>
 <button id="resetbutton" (click)='resetButton()'>Reset</button>
 <div id="timerbutton">{{timeLeft}} Seconds left...</div>
 </section>
