--- a/src/app/game-modes/endless-trivia/endless-trivia.component.html
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.html
@@ -1,16 +1,23 @@
 <!-- header containing logo/name, login/profile link, score? -->
 <body>
-    
-<h1>Hint</h1>
-<div class="giphCont" *ngFor="let gif of giphArray">
-    <img src="{{gif.images.original.url}}" alt="GiphHint">
-</div>
-
+<h1>SCORE: {{user_score}}</h1>
+<div id="q_cont">
 <h1>Question</h1>
 <div>{{randomQuestion}}</div>
-
+</div>
+<h1>Hint</h1>
+<img src="{{giphHint}}" alt="">
+<!-- <div class="giphCont" *ngFor="let gif of giphArray">
+    <img src="{{gif.images.original.url}}" alt="GiphHint">
+</div> -->
+<button id="new_hint">New Hint</button>
 <input id="user_answer" type="text" placeholder="Your answer" [(ngModel)]="user_answer">
-
 <button (click)="submitAnswer()">Submit</button>
+
+<!-- <h1 mat-dialog-title>Dialog with elements</h1>
+<div mat-dialog-content>This dialog showcases the title, close, content and actions elements.</div>
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close>Close</button>
+</div> -->
 
 </body>
