more signin form work

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -2,6 +2,9 @@
     <form #authForm="ngForm" (ngSubmit)="onSignup(authForm)">
         <h2>Sign up</h2>
         <mat-form-field>
+          <input matInput id="username" type="text" ngModel name="username" placeholder="Username" #username="ngModel" required>
+        </mat-form-field>
+        <mat-form-field>
           <input matInput id="email" type="email" ngModel name="email" placeholder="Email" #email="ngModel" required email>
           <mat-error *ngIf="email.invalid">Please enter a valid Email</mat-error>
         </mat-form-field>
