--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,35 @@
-<p>header works!</p>
+<header>
+  <button (click)="backClick()">Back</button>
+  <a href="#" class="logo">Giphia</a>
+
+<!--always have a login/signout(based on user auth) button and back -->
+<!--ng if-->
+  <!-- cw <div *ngIf="fireService.isLoggedin">It Worked!</div>-->
+    <!-- <nav> -->
+        <ul>
+            <li><a routerLink="/player-profile">Player Profile</a></li> 
+            <li><a routerLink="/signin">Login</a></li> 
+            <li><a routerLink="/home">Home</a></li>
+          </ul>
+
+    <!-- <ng-container *ngFor="let route of routes">
+
+        <button *ngIf='route.data.show && !route.data.showChildren' 
+                    ngClass='nav-button' size='small' [routerLink]="[route.path]"
+                    [title]="route.data.title" routerLinkActive="active" 
+                    [routerLinkActiveOptions]="{exact:true}">
+        <ces-svgs [type]="route.data.icon" class="icon"></ces-svgs> <br>
+        {{route.data.navLabel}}
+        </button>
+
+        <button *ngIf='route.data.show && route.data.showChildren' 
+                    ngClass='nav-button' size='small' [routerLink]="[route.path]"
+                    [title]="route.data.title" routerLinkActive="active" 
+                    [routerLinkActiveOptions]="{exact:true}">
+        <ces-svgs [type]="route.data.icon" class="icon"></ces-svgs> <br>
+        {{route.data.navLabel}}
+        </button>
+
+    </ng-container> -->
+<!-- </nav> -->
+</header>
