--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,63 @@
+body{
+    display:flex;
+    flex-direction: column;
+}
+
+.background-circles{
+    background-color: white;
+    border-radius: 50%;
+    opacity:10%;
+    width:90%;
+    height:90%;
+}
+
+
+
 .graphicsArea{
     display:flex;
-    width: 300px;
+    justify-content: center;
+    align-items:center;
+    height: 300px;
+    background-color:white;
+    
 
 }
+
+
+
+/* .large-dot{
+    height:220px;
+    width:220px;
+    border-radius:50%;
+    background-color:rgba(247, 136, 167, 0.6);
+    position:fixed;
+    top:240px;
+    right:74px;
+  }
+
+  .medium-dot{
+    height:170px;
+    width:170px;
+    border-radius:50%;
+    background-color:rgba(247, 193, 162, 0.7);
+    justify-content:flex-end;
+    display:flex;
+    flex-direction:column;
+    margin:150px 0px 0px -80px;
+    position:fixed;
+    top:212px;
+    right:17px;
+  }
+
+  .small-dot{
+    height:91px;
+    width:91px;
+    border-radius:50%;
+    background-color:rgba(207, 130, 213, 0.6);
+    justify-content:flex-end;
+    display:flex;
+    flex-direction:column;
+    position:fixed;
+    top:299px;
+    right:18px;
+   } */
