--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -1,1 +1,29 @@
-<p>player-profile works!</p>
+<app-header></app-header>
+
+<div class="playerHeaderSection informationContainer">
+   <i class="fas fa-glasses"></i><img class="avatar" src='' alt="player-avatar" />
+   <h1>{{playerName}}</h1>
+   <p>{{" Player since: " + signUpYear }}</p>
+</div>
+
+<div class="higestScoreSection informationContainer"> 
+    <p>Highest Personal Score</p>
+    <h2> {{highestScore}} points</h2>
+ </div>
+
+ <div class="playerStatsSection informationContainer"> 
+    <p>Games Played:</p>
+    <h2>{{numberOfGamesPlayed}}</h2>
+
+    <div class="verticalPipe"></div>
+
+    <p>Player Ranking:</p>
+    <h2>{{playerRanking}}</h2>
+ </div>
+ 
+ <button (click)="playCount()"(click)="playGameRoute()" >Play</button>
+ <button (click)="CreateAvatarRoute()">Create Avatar</button>
+ <button>Reset Stats</button>
+ <!-- <button id="resetStats" (click)="resetStats()">Reset Stats</button> -->
+
+ 
