--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div *ngIf="!isLogin">
     <form #authForm="ngForm" (ngSubmit)="onSignup(authForm)">
         <h2>Sign up</h2>
