--- a/src/app/choose-avatar/choose-avatar.component.html
+++ b/src/app/choose-avatar/choose-avatar.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <div class="graphicsArea">
     <a routerLink="/home" class="logo">Logo will go here</a>
     </div>
@@ -8,15 +6,15 @@
     <h1>Choose Avatar</h1>
 
     <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='' alt="player-avatarOption" />
+    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
     </div>
 
     <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='' alt="player-avatarOption" />
+    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
     </div>
 
     <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='' alt="player-avatarOption" />
+    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
     </div>
 
     <h1>Create Custom Avatar</h1>
