--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <header>
   <div class="navigationContainer">
     <nav>
@@ -11,7 +9,9 @@
     </div>
 
     <div class="graphicsArea">
-    <a routerLink="/home" class="logo">Logo will go here</a>
+    <a routerLink="/home" class="logo">
+      <img src="/assets/images/giphiacircle.png" alt="Giphia circular logo">
+    </a>
     </div>
 
 </header>
