--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<app-header></app-header>
+
 <div class="container">
     <router-outlet></router-outlet>
   </div>
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
 <!-- <app-endless-trivia></app-endless-trivia> -->
+
