--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,14 @@
 <header>
   <button (click)="backClick()">Back</button>
-  <a href="#" class="logo">Giphia</a>
+  <h1 href="#" class="logo">Giphia</h1>
 
-<!--always have a login/signout(based on user auth) button and back -->
-<!--ng if-->
-  <!-- cw <div *ngIf="fireService.isLoggedin">It Worked!</div>-->
-    <!-- <nav> -->
-        <ul>
-            <li><a routerLink="/player-profile">Player Profile</a></li> 
-            <li><a routerLink="/signin">Login</a></li> 
-            <li><a routerLink="/home">Home</a></li>
-          </ul>
-
-    <!-- <ng-container *ngFor="let route of routes">
-
-        <button *ngIf='route.data.show && !route.data.showChildren' 
-                    ngClass='nav-button' size='small' [routerLink]="[route.path]"
-                    [title]="route.data.title" routerLinkActive="active" 
-                    [routerLinkActiveOptions]="{exact:true}">
-        <ces-svgs [type]="route.data.icon" class="icon"></ces-svgs> <br>
-        {{route.data.navLabel}}
-        </button>
-
-        <button *ngIf='route.data.show && route.data.showChildren' 
-                    ngClass='nav-button' size='small' [routerLink]="[route.path]"
-                    [title]="route.data.title" routerLinkActive="active" 
-                    [routerLinkActiveOptions]="{exact:true}">
-        <ces-svgs [type]="route.data.icon" class="icon"></ces-svgs> <br>
-        {{route.data.navLabel}}
-        </button>
-
-    </ng-container> -->
-<!-- </nav> -->
+  <div>
+    <ul class="navbar-links">
+      <li>{{playerInfo.name}}</li>
+      <li><a routerLink="/player-profile">Player Profile</a></li> 
+      <li><a routerLink="/signin">Login</a></li> 
+        <!-- <li><a routerLink="/home">Home</a></li> -->
+    </ul>
+  </div>
+  
 </header>
