still not showing logo image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+
 
 <div class="container">
     <router-outlet></router-outlet>
@@ -7,3 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
 <!-- <app-endless-trivia></app-endless-trivia> -->
 
+<div class="giphiaLogo">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
