--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
   <button (click)="backClick()">Back</button>
-  <h1 href="#" class="logo">Giphia</h1>
+  <h1 routerLink="/home" class="logo">
+    <img src="/assets/images/giphiaLogo.png" alt="">
+    Giphia</h1>
 
   <div>
     <ul class="navbar-links">
