--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
     <div class="graphicsArea">
     <a routerLink="/home" class="logo">
-      <img src="/assets/images/giphiacircle.png" alt="Giphia circular logo">
+      <img src="assets/images/giphiaLogo.png">
     </a>
     </div>
 
