--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,29 @@
+.header-wrapper {
+  background: rgba(114,9,183,1);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.login-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 1em;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  text-shadow: 50px 50px 0px rgba(255,255,255,.2);
+}
+
+.login-btn {
+  margin: 0;
+}
+
+.logo {
+  margin: 0;
+}
+
 header {
     background-color: white;
 }
@@ -10,4 +36,8 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+.back-btn {
+  margin-left: 1em;
 }
