--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -1,5 +1,13 @@
+html, body {
+  background: linear-gradient(142deg, rgba(114,9,183,1) 35%, rgba(148,70,200,1) 100%);
+  height: 100vh;
+  padding-top: 120px;
+}
+
+
 form {
-  margin: 3em auto 50px;
+  background-color: white;
+  margin:  0 auto 50px;
   padding: 3em;
   display: flex;
   flex-direction: column;
