--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <header>
-  <button (click)="backClick()">Back</button>
+  <button class="back" (click)="backClick()">Back</button>
   <h1 routerLink="/home" class="logo">
-    <img src="/assets/images/giphiaLogo.png" alt="">
-    Giphia</h1>
+    <img src="/assets/images/giphiaplain.jpg" alt="">
+    </h1>
 
   <div>
     <ul class="navbar-links">
       <li>{{playerInfo.name}}</li>
-      <li><a routerLink="/player-profile">Player Profile</a></li> 
-      <li><a routerLink="/signin">Login</a></li> 
+      <li><a class = "profile" routerLink="/player-profile">Player Profile</a></li> 
+      <li><a class = "signin" routerLink="/signin">Login</a></li> 
         <!-- <li><a routerLink="/home">Home</a></li> -->
     </ul>
   </div>
