created service and npm installed bottt API but not functional yet

--- a/src/app/choose-avatar/choose-avatar.component.html
+++ b/src/app/choose-avatar/choose-avatar.component.html
@@ -1,5 +1,5 @@
 <div class="graphicsArea">
-    <a routerLink="/home" class="logo">Logo will go here</a>
+    
     </div>
     
 <div class="avatarOptions">
@@ -10,12 +10,16 @@
     </div>
 
     <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
+    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=purple' alt="player-avatarOption" />
     </div>
 
     <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
+    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=pink' alt="player-avatarOption" />
     </div>
+
+    <div>
+        <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=blue' alt="player-avatarOption" />
+        </div>
 
     <h1>Create Custom Avatar</h1>
     <button></button>
