--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -8,16 +8,16 @@
       </div>
   
       <div class="GraphicsArea">
-      <a routerLink="/home" class="logo">Logo will go here</a>
+        <img src="assets/images/giphiacircle.jpg" alt="Giphia Logo">
       </div>
   
   </header>
   
   <body>
-      <button (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
+      <button class = "endless" (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
       <!-- <li><a routerLink="/leaderboard">Leaderboard</a></li> -->
   
-      <button (click)="timeChallengeGame()" (click)="playCount()">Play Time Challenge</button>
+      <button class = "timed" (click)="timeChallengeGame()" (click)="playCount()">Play Time Challenge</button>
       <!-- <li><a routerLink="/game-modes">Play</a></li> -->
   </body>
   
