--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <button class="back" (click)="backClick()">Back</button>
   <h1 routerLink="/home" class="logo">
-    <img src="/assets/images/giphiaplain.jpg" alt="">
+    <img src="/assets/images/giphiaplain.jpg" alt="Giphia Logo">
     </h1>
 
   <div>
