--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
     <div class="graphicsArea">
     <a routerLink="/home" class="logo">
-      <img src="assets/images/giphiacircle.jpg">
+      <img src="assets/images/giphiacircle.jpg" alt="Giphia Logo">
     </a>
     </div>
 
