--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,5 +1,5 @@
 <div class="graphicsArea">
-    <a routerLink="/home" class="logo">Logo will go here</a>
+    <img src="assets/images/giphiacircle.jpg" alt="Giphia Logo">
     </div>
     
 <div class="leaderboard">
