--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -1,17 +1,9 @@
 <header>
-    <div class="container">
-      <nav>
-          <ul>
-            <!-- <li><a routerLink="/signin">Login</a></li> -->
-          </ul>
-        </nav>
-      </div>
-  
-      <div class="GraphicsArea">
-      <a routerLink="/home" class="logo">Logo will go here</a>
-      </div>
-  
-  </header>
+    <div class="graphicsArea">
+        
+      <img src="/assets/images/giphiacircle.png" alt="Giphia circular logo">
+    </div>
+</header>
   
   <body>
       <button (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
