--- a/src/app/game-modes/time-challenge/time-challenge.component.css
+++ b/src/app/game-modes/time-challenge/time-challenge.component.css
@@ -75,18 +75,99 @@ h1 {
 }
 
 .hidden{
-      /* visibility: hidden; */
-      display: none;
+  display: none;
 }
  
 #gameOver {
   font-family: Arial, Helvetica, sans-serif;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+  height: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: #39065a;
+}
+
+#endingParagraph{
+  display:flex;
+  color:white;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 200;
+  color:#ea0599;
+  padding-top:50px;
+}
+
+.replay{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  font-size: 20px;
+  font-weight:300;
+}
+
+.clickStart{
+  display:flex;
+  color:white;
+  justify-content:center;
+  align-items: center;
+  font-weight:100;
+  font-size:17px;
+  color:white;
+}
+
+.endingHeader{
+  font-size: 50px;
+  
+}
+
+button.replay{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+}
+
+button{
+  display:flex;
+  justify-content:center;
+  align-items: center;
+}
+
+#wrongAnswerPopUp{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: orange;
-  /* z-index: 99999; */
-  height: 100%;
-  width: 100%;
+  background: black;
+  width: 100px;
+  height: 100px;
+  padding: 50px 30px 10px 30px;
+  text-align: center;
+  z-index: 100;
+  color: Red;
+  outline: 10px solid #ffff;
+  outline-offset: -30px;
+}
+
+#correctAnswerPopUp{
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: green;
+    width: 100px;
+    height: 100px;
+    padding: 50px 30px 10px 30px;
+    text-align: center;
+    z-index: 100;
+    color: white;
+    outline: 10px solid #ffff;
+    outline-offset: -30px;
 }
