--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,16 @@
 <header>
-  <button (click)="backClick()">Back</button>
+  
   <h1 href="#" class="logo">Giphia</h1>
 
   <div>
     <ul class="navbar-links">
       <li>{{playerInfo.name}}</li>
-      <li><a routerLink="/player-profile">Player Profile</a></li> 
+      <li><a routerLink="/home">Home</a></li> 
       <li><a routerLink="/signin">Login</a></li> 
+      <li><a routerLink="/player-profile">Player Profile</a></li>
+
+      <button class="back" (click)="backClick()">Back</button>
+      
         <!-- <li><a routerLink="/home">Home</a></li> -->
     </ul>
   </div>
