--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,7 +19,17 @@ body{
     align-items:center;
     height: 300px;
     background-color:white;
-    
+  
+}
+
+button{
+height:30px;
+display:flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin:11px 20px;
+align-content: space-between;
 
 }
 
