--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <router-outlet></router-outlet>
   </div>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&family=Roboto+Slab&display=swap&family=Bangers&display=swap" rel="stylesheet">
 <!-- <app-endless-trivia></app-endless-trivia> -->
 
 <div class="giphiaLogo">
