--- a/src/app/choose-avatar/choose-avatar.component.css
+++ b/src/app/choose-avatar/choose-avatar.component.css
@@ -3,4 +3,15 @@
     background-color:gray;
     width: 50px;
     height:50px;
+    margin-left: 2%;
+}
+
+html {
+    background: rgb(58,12,163);
+    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+    height: 100vh;
+  }
+
+h1{
+    
 }
