--- a/src/app/choose-avatar/choose-avatar.component.html
+++ b/src/app/choose-avatar/choose-avatar.component.html
@@ -5,9 +5,6 @@
 <div class="avatarOptions">
     <h1>Choose Avatar</h1>
 
-    <div>
-    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/:seed.svg' alt="player-avatarOption" />
-    </div>
 
     <div>
     <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=purple' alt="player-avatarOption" />
@@ -21,8 +18,8 @@
         <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=blue' alt="player-avatarOption" />
         </div>
 
-    <h1>Create Custom Avatar</h1>
-    <button></button>
+    <!-- <h1>Create Custom Avatar</h1>
+    <button></button> -->
 
 
 
