--- a/src/app/game-modes/endless-trivia/endless-trivia.component.css
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.css
@@ -1,8 +1,8 @@
 body {
     height: 90vh;
     width: 100vw;
-    background: rgb(114,9,183);
-    background: linear-gradient(142deg, rgba(114,9,183,1) 35%, rgba(148,70,200,1) 100%);
+    background: rgb(58,12,163);
+    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
     padding: 0px;
 }
 
@@ -24,6 +24,17 @@ h1{
     float: inline-end;
     background-color: #f72585;
     color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#score {
+align-self: flex-start;
+}
+
+#quit {
+    align-self: flex-end;
 }
 
 #q_cont {
@@ -78,3 +89,8 @@ button {
     font-size: 15px;
     font-weight: 200;
 }
+/* PINK - #f72585
+PURP - #7209b7
+DPRP - #3a0ca3
+BLUE - #4361ee
+CYAN - #4cc9f0 */
