--- a/src/app/game-modes/game-modes.component.css
+++ b/src/app/game-modes/game-modes.component.css
@@ -1,11 +1,18 @@
 img{
     height: 150px;
 }
-
+html {
+    background: rgb(58,12,163);
+    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+    height: 100vh;
+  }
 /* .GraphicsArea{ */
 body{
     display:flex;
     flex-direction: column;
+    background: rgb(58,12,163);
+    background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+    height: 100vh;
 }
 
 .graphicsArea{
@@ -17,20 +24,24 @@ body{
 }
 
 .endless, .timed{
-    width: 125px;
-    height: 40px;
-    margin: 5px;
+    width: 200px;
+    height: 80px;
+    margin:11px 20px;
     background-color: #39065a;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     color: #e4fbff;
-    font-size: 15px;
+    font-size: 25px;
     box-shadow: 2px 2px 7px #ea0599;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    flex-direction: row;
   }
   
-/* } */
-
 button{
 height:30px;
 display:flex;
