--- a/src/app/game-modes/time-challenge/time-challenge.component.css
+++ b/src/app/game-modes/time-challenge/time-challenge.component.css
@@ -1,20 +1,3 @@
-* {
-  font-weight: 700;
-  font-family: "Open Sans", sans-serif;
-}
-
-h1 {
-  padding-top: 5%;
-  padding-bottom: 3%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  font-weight: 900;
-  font-size: 32px;
-  color: #e4fbff;
-  text-shadow: 3px 3px 5px #39065a;
-  background-image: linear-gradient(to right, #ea0599, #9a0f98, #6a0572, #39065a)
-}
 .blocks {
   display: flex;
   justify-content: center;
@@ -170,4 +153,91 @@ button{
     color: white;
     outline: 10px solid #ffff;
     outline-offset: -30px;
+} 
+
+body {
+  height: 90vh;
+  width: 100vw;
+  background: rgb(58,12,163);
+  background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+  padding: 0px;
 }
+
+img {
+  max-height: 75vh;
+  max-width: 95vw;
+  padding-bottom: 10px;
+}
+
+h1{
+  font-family: 'Roboto Slab', serif;
+  margin: 0px;
+}
+
+.ticker {
+  padding: 0vw 2.5vw 0vw 2.5vw;
+  margin-bottom: 2vh;
+  width: 100vw;
+  float: inline-end;
+  background-color: #f72585;
+  color: white;
+}
+
+#q_cont {
+background-color: #4cc9f0;
+  border-radius: 15px;
+  width: 95vw;
+  margin: 0vw 2.5vw 5vw 2.5vw;
+  box-shadow: 1px 1px 5px 1px #3a0ca3;
+}
+
+#q_title {
+  width: 100%;
+  padding: 2vw;
+}
+
+#random_q {
+  font-family: 'Poppins', sans-serif;
+  padding: 2vw;
+}
+
+#h_cont {
+color: white;
+  width: 95vw;
+  margin: 0vw 2.5vw 0vw 2.5vw;
+  display: flex;
+  justify-content: center;
+}
+
+#button_cont {
+  display: block;
+  width: 95vw;
+  position: fixed;
+  bottom: 70px;
+}
+
+button, input  {
+  width: 90vw;
+  margin: 0vw 5vw 0vw 5vw;
+  height: 30px;
+}
+
+input {
+  padding: 0px;
+  margin-bottom: 5px;
+}
+
+button {
+  border: none;
+  border-radius: 15px;
+  color: #3a0ca3;
+  font-family: 'Roboto Slab', serif;
+  font-size: 15px;
+  font-weight: 200;
+}
+
+/* PINK - #f72585
+PURP - #7209b7
+DPRP - #3a0ca3
+BLUE - #4361ee
+CYAN - #4cc9f0 */
