--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,27 +1,34 @@
-.header-wrapper {
-  background: rgba(114,9,183,1);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+/* html {
+  background: #f72585;
+} */
+
+h1 {
+  font-family: 'Bangers', cursive;
+  color: white;
+  font-size: 35px;
 }
 
 .login-wrapper {
-  margin: 4px 4px;
-  border-radius: 3px;
-  padding: 0px 3px;
-  background-color: rgba(0, 0, 0, 0.383);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-right: 1em;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  cursor: pointer;
+ 
 }
 
 .login-btn {
-  margin: 0;
+  margin:10px 10px;
+  width: 80px;
+  height: 40px;
+  background-color: #39065a;
+  box-shadow: 2px 2px 7px #ec92cc;
+  border: none;
+  border-radius: 20px;
+  color: #e4fbff;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;  
 }
 
 .logo {
@@ -29,32 +36,48 @@
 }
 
 header {
-    background-color: white;
-    display:flex;
-    margin-left:20px;
-    margin-top:20px;
-    justify-content: space-between;
-
+  /* margin-left: 20px; */
+  padding-top: 10px;
+  margin-top: 0px;
+  background: #f72585;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    justify-content: space-between;
-    padding:0px 15px 0px 15px;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-between;
+  padding: 0px 15px 0px 15px;
 }
 
-li{
-    padding:0px 20px 0px 15px;
+li {
+  padding: 0px 20px 0px 15px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .back-btn {
   margin-left: 1em;
+
 }
 
-
+button {
+  margin:10px 10px;
+  width: 60px;
+  height: 30px;
+  background-color: #39065a;
+  box-shadow: 2px 2px 7px #ec92cc;
+  border: none;
+  border-radius: 20px;
+  color: #e4fbff;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+}
