--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
+<html>
 <header>
-  <div class="header-wrapper">
-
-    <button class="back-btn" (click)="backClick()">Back</button>
-    <h1 class="logo">Giphia</h1>
+<button class="back-btn" (click)="backClick()">Back</button>
+<a routerLink="/home" class="logo">
+  <img src="assets/images/pinkbackground.jpg">
+  </a>
 
     <div class="login-wrapper">
       <h3 class="login-btn" (click)="onLogin()" *ngIf="!isAuthenticated">Login</h3>
@@ -13,6 +14,5 @@
         <button mat-menu-item (click)="onLogout()">Log Out</button>
       </mat-menu>
     </div>
-
-  </div>
 </header>
+</html>
