--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,20 @@
+html {
+  background: rgb(58,12,163);
+  background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+  height: 100vh;
+}
+
+#ticker {
+  background-color: #f72585;
+  color: white;
+  height: 25px;
+  border-radius: 0px 0px 10px 10px;
+  padding-top: 1vh;
+  margin: 0vh 0vh 10vh 0vh;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
 body{
     display:flex;
     flex-direction: column;
@@ -11,8 +28,6 @@ body{
     height:90%;
 }
 
-
-
 .graphicsArea{
     display:flex;
     justify-content: center;
@@ -23,21 +38,38 @@ body{
 }
 
 button{
-height:30px;
-display:flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-margin:11px 20px;
-align-content: space-between;
-
+    width: 200px;
+    height: 120px;
+    margin:11px 20px;
+    background-color: #39065a;
+    border: none;
+    border-radius: 20px;
+    color: #e4fbff;
+    font-size: 25px;
+    box-shadow: 2px 2px 7px #ea0599;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    flex-direction: row;
 }
 
+button:hover{
+  background-color: #38065a98;
+  box-shadow: 3px 3px 8px rgba(234, 5, 154);
+  font-size: 26px;
+}
 
-img{
-  height: 150px;
-  display: flex;
-  padding-bottom: 70%;
+img {
+  max-width: 50vw;
+  padding-bottom: 10vh;
+  padding-left: 10vh;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  
   }
 
 /* .large-dot{
